Adding some improvements